--- a/3parallel.html
+++ b/3parallel.html
@@ -15,7 +15,7 @@ layout: page
             reader.onload = async () => {
                 data = JSON.stringify({ "data": [reader.result] })
                 post = { method: "POST", body: data, headers: { "Content-Type": "application/json" } }
-                const response = await fetch('https://hf.space/embed/jph00/pets/+/api/predict/', post)
+                const response = await fetch('https://swartchris8-example.hf.space/api/predict/', post)
                 const json = await response.json();
                 const prediction = json['data'][0]['confidences'][0];
                 const div = document.createElement('div');
